# UCMake

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.codocs/: README.md  config.json
.codocs/docs/: cmake.md  infra.md
.codocs/docs/_notes/: README.md
.codocs/docs/cmake/: CPM.cmake.md  UbpaBasic.cmake.md  UbpaBuild.cmake.md  UbpaDoc.cmake.md  UbpaDownload.cmake.md  UbpaGit.cmake.md  UbpaInit.cmake.md  UbpaPackage.cmake.md  UbpaQt.cmake.md  hooks.md
.codocs/docs/cmake/hooks/: pre-commit.in.md
.codocs/docs/infra/: .codocs.md  .more-hooks.md  .ucmake.md
.codocs/docs/infra/.codocs/: codocs.py.md  hooks.md
.codocs/docs/infra/.more-hooks/: more-hooks.py.md
.codocs/docs/infra/.ucmake/: hooks.md
.codocs/hooks/: commit-msg  pre-commit
.codocs/scripts/: codocs.py  setup-hooks.py
.more-hooks/: README.md  more-hooks.py
.ucmake/: .gitignore
.ucmake/hooks/: ascii-check  pre-commit
cmake/: CPM.cmake  UbpaBasic.cmake  UbpaBuild.cmake  UbpaDoc.cmake  UbpaDownload.cmake  UbpaGit.cmake  UbpaInit.cmake  UbpaPackage.cmake  UbpaQt.cmake  UbpaTool.cmake
cmake/hooks/: pre-commit.in
config/: Config.cmake.in  Ubpa_config_dll.in
data/: hello.txt
doc/: intro.md
docs/superpowers/plans/: 2026-04-14-ucmake-hook-distribution.md
docs/superpowers/specs/: 2026-04-14-ucmake-hook-distribution-design.md
ground/: CMakeLists.txt
ground/test01/: CMakeLists.txt
include/test_02_lib/: hello.h
include/test_03_dll/: servant.h
infra/.codocs/: codocs.py
infra/.codocs/hooks/: commit-msg  pre-commit
infra/.more-hooks/: more-hooks.py
src/: CMakeLists.txt
src/EMPTY/: CMakeLists.txt
src/head_files/: CMakeLists.txt
src/test/: CMakeLists.txt
src/test/00_Basic/: CMakeLists.txt
src/test/01_CPM/: CMakeLists.txt  main.cpp
src/test/01_GroupSrcs/: CMakeLists.txt
src/test/02_cpp20/: CMakeLists.txt  main.cpp
src/test/02_lib/GenLib/: CMakeLists.txt  (+1 more)
src/test/04_dll/: mul.h
src/test/05_data/: main.cpp
src/test/06_static_shared/: mul.h
(+38 files in other folders)
